[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 84.0
margin_top = 5.0
margin_right = 147.0
margin_bottom = 73.0

[node name="StartButton" type="Button" parent="GridContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Start"

[node name="SettingsButton" type="Button" parent="GridContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Settings"

[node name="QuitButton" type="Button" parent="GridContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="GridContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="GridContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
